# viz_paraphernalia

./: .gitignore  README.md  home.py  main.py  pyproject.toml
apps/: route.py
config/: base_template.py  const.py  session.py
pages/: prepare.py
templates/: base_template.py
templates/public/: home.py  prepare.py
