[tool.poetry]
name = "viz-paraphernalia"
version = "0.1.0"
description = ""
authors = ["Yusei Miura"]
readme = "README.md"
packages = [{include = "viz_paraphernalia"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.23.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
